@@ -1,3 +1,7 @@
+* Tue Nov 27 2007 Jesse Keating <jkeating@redhat.com>
+- Enable TMPDIR again so that anconda-runtime working files
+go to the working dir.
+
 * Thu Nov 22 2007 Jesse Keating <jkeating@redhat.com>
 - Print a usage if no options are passed
 - Correct a man page typo
